# uv_template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose-dev.build.yml  docker-compose-dev.yml  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: publish-dev-image.yml  python-locks.yml  requirements.txt.yml
